--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,26 @@ jobs:
         run: |
           pytest
 
+  release-pypi:
+    name: "Release to pypi"
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    needs: [test-python]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: "Build Package"
+        run: |
+          python -m pip install build wheel
+          python -m build --sdist --wheel
+      - name: "Deploy to PyPI"
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+
 #  build-docs:
 #    name: "Build Docs"
 #    needs: ["run-if"]
